--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(CMAKE_C_FLAGS "-Wall -Wextra -g -O2")
 
 add_subdirectory(src)
 add_subdirectory(tests)
+add_subdirectory(examples)
 
 install(DIRECTORY include/
 	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
