--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright 2020 FUJITSU LIMITED
 
 add_executable(list_all_pe_info list_all_pe_info.c)
-target_link_libraries(list_all_pe_info FJhwb)
+target_link_libraries(list_all_pe_info ${HWBLIB})
 
 add_executable(sync_1cmg sync_1cmg.c)
-target_link_libraries(sync_1cmg FJhwb pthread)
+target_link_libraries(sync_1cmg ${HWBLIB} pthread)
